--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space Out</title>
     <!-- here is our browser icon  -->
-    <link rel="icon" type="image/png" href="assets\images\favicon-moon.jpg">
+    <link rel="icon" type="image/png" href="assets\images\favicon-moon.png">
     
     <!-- here are our css reference sheets  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -18,14 +18,14 @@
         <div class="main-container">
             <div class="row">
                 <!-- main content  -->
-                <div class="col s12 m8 l9">
+                <div class="col s12 m8 l9 content-container">
                     <!-- main content page, astronaut blurbs, and image gallery and everything else -->
 
                     Here is some mock up main content that should be regenerated in the DOM.
                 </div>
 
                 <!-- side bar  -->
-                <div class="col s12 m4 l3">
+                <div class="col s12 m4 l3 side-container">
                     <!-- here is where the images of the day should be -->
                     <div class="row image-sidebar">
                         <!-- nasa image of the day  -->
@@ -33,7 +33,7 @@
                             <h4 class="sidebar-header">NASA's Image of the Day</h4>
                             <img id="day-nasa-img" src="assets/images/exampleimagefornasa.jpg" />
                             <h5 class="sidebar-subheader">History of Chandra X-Ray Observatory</h5>
-                            <!-- <p>This most distant x-ray cluster of galaxies yet has been found by astronomers using Chandra X-ray Observatory (CXO).</p> -->
+                            <p>This most distant x-ray cluster of galaxies yet has been found by astronomers using Chandra X-ray Observatory (CXO).</p>
                         </div>
                         <div class="col s12 side-child">
                             <h4 class="sidebar-header">AstroBins Image of the Day</h4>
@@ -43,9 +43,24 @@
                     </div>
                 </div>
             </div>
-            
-
-            <!-- this should be generated in the dom -->
+            <div class="row">
+                <!-- this is our footer  -->
+                <footer class="col s12">
+                    <!-- some external content and minor links can go here  -->
+                        <h4>S p a c e d O u t</h4>
+                        <ul>
+                            <li>
+                                <a href="#">I'm a link </a>
+                            </li>
+                            <li>
+                                <a href="#">I'm a link </a>
+                            </li>
+                            <li>
+                                <a href="#">I'm possibly another link</a>
+                            </li>
+                        </ul>
+                </footer>
+            </div>
         </div>
     </div>
 
