Commented out Astro Bios stuff, so my code would work

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <!-- main content page, astronaut blurbs, and image gallery and everything else -->
 
                     Here is some mock up main content that should be regenerated in the DOM.
+                    <button id="button-1"></button>
                 </div>
 
                 <!-- side bar  -->
