added my changes

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             </section>
             Here is some mock up main content that should be regenerated in the
             DOM.
+            <button id="button-1"></button>
           </main>
-
           <!-- side bar  -->
           <aside class="col s12 m4 l3 side-container">
             <!-- here is where the images of the day should be -->
@@ -81,7 +81,9 @@
     </div>
 
     <!-- here are our javascript links  -->
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script> -->
   </body>
 </html>
