Astronauts display on click, mercury console.log on click, need to fix Space News

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="col s12 m8 l9">
                     <div class="content-container" id="content-container">
                         <!-- main content page, astronaut blurbs, and image gallery and everything else -->
-                        <section id="astroList"></section>
+                        <!-- <section id="astroList"></section> -->
                     </div>
                 </div>
 
