--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spaced Out</title>
     <!-- here is our browser icon  -->
-    <link rel="icon" type="image/png" href="assets\images\favicon-moon.png">
+    <link rel="icon" type="image/png" href="assets\images\favicon-moon.png" />
     
     <!-- here are our css reference sheets  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
     <!-- here is the icon sheet  -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <!-- here is our style sheet  -->
-    <link rel="stylesheet" href="assets/css/style.css">
-
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/media.css" />
 </head>
 
 <body>
@@ -24,7 +24,6 @@
                 <div class="col s12 m8 l9">
                     <div class="content-container" id="content-container">
                         <!-- main content page, astronaut blurbs, and image gallery and everything else -->
-                        <!-- <section id="astroList"></section> -->
                     </div>
                 </div>
 
@@ -57,7 +56,7 @@
                         <h4>Spaced Out</h4>
                         <ul>
                             <li>
-                                <a href="#">About The Creators</a>
+                                <a href="#" target="_blank">About The Creators</a>
                             </li>
                             <li>
                                 <a href="https://github.com/rawagschal/spaced-out" target="_blank">GitHub Repo</a>
