--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="col s12 m8 l9 content-container">
                     <!-- main content page, astronaut blurbs, and image gallery and everything else -->
                     Here is some mock up main content that should be regenerated in the DOM.
-                    <button id="button-1"></button>
+                    <button id="galleryBtn">Get Photo Gallery</button>
                 </div>
                 <!-- side bar  -->
                 <div class="col s12 m4 l3">
