Dynamic Images for Astrobin & Nasa

--- a/index.html
+++ b/index.html
@@ -35,15 +35,10 @@
                         <div class="row image-sidebar">
                             <!-- nasa image of the day  -->
                             <div class="col s12 side-child">
-                                <h4 class="sidebar-header">NASA's Image of the Day</h4>
-                                <img id="day-nasa-img" src="assets/images/exampleimagefornasa.jpg" />
-                                <h5 class="sidebar-subheader">History of Chandra X-Ray Observatory</h5>
-                                <p>This most distant x-ray cluster of galaxies yet has been found by astronomers using Chandra X-ray Observatory (CXO).</p>
+                                <h4 id=nasa class="sidebar-header">NASA's Image of the Day</h4>
                             </div>
                             <div class="col s12 side-child">
-                                <h4 class="sidebar-header">AstroBins Image of the Day</h4>
-                                <img id="day-astrobin-img" src="assets/images/exampleimageforastrobin.jpg" />
-                                <h5 class="sidebar-subheader">LDN 1251</h5>
+                                <h4 id=astrobin class="sidebar-header">AstroBin's Image of the Day</h4>
                             </div>
                         </div>
                     </div>
