adding a back button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- here are our css reference sheets  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
     <!-- here is the icon sheet  -->
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />    
     <!-- here is our style sheet  -->
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/media.css" />
@@ -20,13 +20,22 @@
     <div class="main-wrapper">
         <div class="main-container">
             <div class="row">
+                <!-- this is our header  -->
+                <header class="col s12">
+                    <div class="header-container" id="header-container">
+                        <!-- <button class="back-button" id="back-button">
+                            <i class="tiny material-icons">navigate_before</i>
+                        </button> -->
+                    </div>
+                </header>
+            </div>
+            <div class="row">
                 <!-- main content  -->
                 <div class="col s12 m8 l9">
                     <div class="content-container" id="content-container">
                         <!-- main content page, astronaut blurbs, and image gallery and everything else -->
                     </div>
                 </div>
-
                 <!-- side bar  -->
                 <div class="col s12 m4 l3">
                     <div class="side-container">
