--- a/index.html
+++ b/index.html
@@ -32,12 +32,23 @@
                     <div class="side-container">
                         <!-- here is where the images of the day should be -->
                         <div class="row image-sidebar">
+                            <!-- icon  -->
+                            <div class="col s12 side-child">
+                                <div class="img-icon-wrapper">
+                                    <a href="#"><img src="assets/images/spacedout-icon.png" alt="Spaced out icon."/></a>
+                                </div>
+                            </div>
                             <!-- nasa image of the day  -->
                             <div class="col s12 side-child">
-                                <h4 id=nasa class="sidebar-header">NASA's Image of the Day</h4>
+                                <div class="img-content-wrapper" id="nasa">
+                                    <h4 class="sidebar-header">NASA's Image of the Day</h4>
+                                </div>
                             </div>
+                            <!-- astrobin image of the day -->
                             <div class="col s12 side-child">
-                                <h4 id=astrobin class="sidebar-header">AstroBin's Image of the Day</h4>
+                                <div class="image-content-wrapper" id="astrobin">
+                                    <h4 class="sidebar-header">AstroBin's Image of the Day</h4>
+                                </div>
                             </div>
                         </div>
                     </div>
