icon size, side bar image classes adjusted

--- a/index.html
+++ b/index.html
@@ -31,23 +31,25 @@
                 <div class="col s12 m4 l3">
                     <div class="side-container">
                         <!-- here is where the images of the day should be -->
-                        <div class="row image-sidebar">
-                            <!-- icon  -->
-                            <div class="col s12 side-child">
-                                <div class="img-icon-wrapper">
-                                    <a href="#"><img src="assets/images/spacedout-icon.png" alt="Spaced out icon."/></a>
+                        <div class="image-sidebar">
+                            <div class="row ">
+                                <!-- icon  -->
+                                <div class="col s12 m12 l12 side-child">
+                                    <div class="img-icon-wrapper">
+                                        <img class="icon-img"src="assets/images/spacedout-icon.png" alt="Spaced out icon."/>
+                                    </div>
                                 </div>
-                            </div>
-                            <!-- nasa image of the day  -->
-                            <div class="col s12 side-child">
-                                <div class="img-content-wrapper" id="nasa">
-                                    <h4 class="sidebar-header">NASA's Image of the Day</h4>
+                                <!-- nasa image of the day  -->
+                                <div class="col s12 side-child">
+                                    <div class="img-content-wrapper" id="nasa">
+                                        <h4 class="sidebar-header">NASA's Image of the Day</h4>
+                                    </div>
                                 </div>
-                            </div>
-                            <!-- astrobin image of the day -->
-                            <div class="col s12 side-child">
-                                <div class="image-content-wrapper" id="astrobin">
-                                    <h4 class="sidebar-header">AstroBin's Image of the Day</h4>
+                                <!-- astrobin image of the day -->
+                                <div class="col s12 side-child">
+                                    <div class="image-content-wrapper" id="astrobin">
+                                        <h4 class="sidebar-header">AstroBin's Image of the Day</h4>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -62,7 +64,7 @@
                         <h4>Spaced Out</h4>
                         <ul>
                             <li>
-                                <a href="#" target="_blank">About The Creators</a>
+                                <a href="#">About The Creators</a>
                             </li>
                             <li>
                                 <a href="https://github.com/rawagschal/spaced-out" target="_blank">GitHub Repo</a>
