fixed mercury bug

--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
                 <!-- this is our header  -->
                 <header class="col s12">
                     <div class="header-container" id="header-container">
-                        <!-- <button class="back-button" id="back-button">
-                            <i class="tiny material-icons">navigate_before</i>
-                        </button> -->
+                        <!-- back button exists here  -->
                     </div>
                 </header>
             </div>
