--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                 <!-- invaders icon  -->
                                 <div class="col s12 m12 l12 side-child">
                                     <div class="img-icon-wrapper">
-                                        <img id="space-invaders" class="icon-img" src="./assets/images/space-invaders-icon.png" alt="Space Invaders icon link."/>
+                                        <img id="space-invaders" class="icon-img" src="./assets/images/space-invader-icon.gif" alt="Space Invaders icon link."/>
                                     </div>
                                 </div>
                             </div>
